--- a/CIT280CRM/CIT280CRM/Views/Home/Index.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Home/Index.cshtml
@@ -4,15 +4,17 @@
 
 <div class="jumbotron">
     <h1>WimSatt Building Supplies</h1>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 col-md-offset-1">
         <h2>Getting started</h2>
         <p>
             Wimsatt Building Materials is a distributor of quality steep slope & low slope roofing, exterior cladding, windows & doors, and general building materials. We serve builders and contractors with our gold standard in service from eight locations across Michigan and Northern Ohio.
         </p>
-        <p><a class="btn btn-default" href="http://wimsattdirect.com/">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="http://wimsattdirect.com/">Visit our website! &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <img src="~/Assets/Building_Front_YellowTrucks.jpg" alt="Yellow Trucks in front of building" width="577" height="250"/>
     </div>
 </div>
