Updateds Home Page

--- a/CIT280CRM/CIT280CRM/Views/Home/Index.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Home/Index.cshtml
@@ -3,29 +3,28 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1><img src="https://d2q79iu7y748jz.cloudfront.net/s/_logo/360ae151e5f918b55154333beecbcf54" /></h1>
+    <p class="lead">Wimsatt Building Materials is a company that sells steep slope & low slope roofing, exterior cladding, windows & doors, and general building materials.
+    Serving builders and contractors across Michigan and Northern Ohio, their focus is on high qaulity standards. Wimsatt Headquarters is located in Wayne, Michigan. </p>
+    <p><a href="http://wimsattdirect.com/" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Products</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Check out all of the products we have to offer and find exactly what you need based on detailed categories and specifications. 
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="http://wimsattdirect.com/products.php">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Services</h2>
+        <p>Check out all of the services we have to offer including: Reliable Delivery, Consulting, Estimating, Showrooms, Will Call, Seamless Gutter, and Insulation Blowers.</p>
+        <p><a class="btn btn-default" href="http://wimsattdirect.com/services">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Locations</h2>
+        <p>With 8 locations servicing all of Michigan and Northern Ohio, each location comes with the promise of the Wimsatt Gold Standard Service and a professional, spacious showroom for you to bring clients to for product selection.</p>
+        <p><a class="btn btn-default" href="http://wimsattdirect.com/locations">Learn more &raquo;</a></p>
     </div>
 </div>
