--- a/CIT280CRM/CIT280CRM/Views/Home/Index.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Home/Index.cshtml
@@ -3,13 +3,21 @@
 }
 
 <div class="jumbotron">
-    <h1><img src="https://d2q79iu7y748jz.cloudfront.net/s/_logo/360ae151e5f918b55154333beecbcf54" /></h1>
-    <p class="lead">Wimsatt Building Materials is a company that sells steep slope & low slope roofing, exterior cladding, windows & doors, and general building materials.
-    Serving builders and contractors across Michigan and Northern Ohio, their focus is on high qaulity standards. Wimsatt Headquarters is located in Wayne, Michigan. </p>
-    <p><a href="http://wimsattdirect.com/" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <div>
+        <img src="https://d2q79iu7y748jz.cloudfront.net/s/_logo/360ae151e5f918b55154333beecbcf54" />
+        <p class="lead">
+            Wimsatt Building Materials is a company that sells steep slope & low slope roofing, exterior cladding, windows & doors, and general building materials.
+            Serving builders and contractors across Michigan and Northern Ohio, their focus is on high qaulity standards. Wimsatt Headquarters is located in Wayne, Michigan.
+        </p>
+        <p><a href="http://wimsattdirect.com/" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    </div>
+    
 </div>
 
 <div class="row">
+    <div>
+        <img src="~/Assets/Building_Front_YellowTrucks.jpg" alt="Yellow Trucks in front of building" />
+    </div>
     <div class="col-md-4">
         <h2>Products</h2>
         <p>
@@ -27,4 +35,5 @@
         <p>With 8 locations servicing all of Michigan and Northern Ohio, each location comes with the promise of the Wimsatt Gold Standard Service and a professional, spacious showroom for you to bring clients to for product selection.</p>
         <p><a class="btn btn-default" href="http://wimsattdirect.com/locations">Learn more &raquo;</a></p>
     </div>
+    
 </div>
