--- a/CIT280CRM/CIT280CRM/Views/Invoice/Create.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Invoice/Create.cshtml
@@ -15,10 +15,11 @@
         <h4>InvoiceModels</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        
         <div class="form-group">
             @Html.LabelFor(model => model.ClientID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ClientID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.ClientID, new SelectList(ViewBag.Clients, "ClientID", "CompanyName"), "Choose client...")
                 @Html.ValidationMessageFor(model => model.ClientID, "", new { @class = "text-danger" })
             </div>
         </div>
