Added Clients and SalesItem controllers, and added quick create buttons on home page

--- a/CIT280CRM/CIT280CRM/Views/Home/Index.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Home/Index.cshtml
@@ -10,8 +10,8 @@
             Serving builders and contractors across Michigan and Northern Ohio, their focus is on high qaulity standards. Wimsatt Headquarters is located in Wayne, Michigan.
         </p>
         <p>
-            <a class="btn btn-default" href="~/Clients/Index">New Client &raquo;</a>
-            <a class="btn btn-default" href="~/Sales/Index">New Sale &raquo;</a>
+            <a class="btn btn-default" href="~/ClientModels/Create">New Client &raquo;</a>
+            <a class="btn btn-default" href="~/SaleItemModels/Create">New Sale &raquo;</a>
         </p>
     </div>
     
