Added Invoice Controller and updated navigation

--- a/CIT280CRM/CIT280CRM/Views/Home/Index.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
         </p>
         <p>
             <a class="btn btn-default" href="~/ClientModels/Create">New Client &raquo;</a>
-            <a class="btn btn-default" href="~/SaleItemModels/Create">New Sale &raquo;</a>
+            <a class="btn btn-default" href="~/InvoiceModels/Create">New Sale &raquo;</a>
         </p>
     </div>
     
