edited index views

--- a/CIT280CRM/CIT280CRM/Views/ClientModels/Index.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/ClientModels/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<CIT280CRM.Models.ClientModels>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Clients";
 }
 
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add New Client", "Create")
 </p>
 <table class="table">
     <tr>
