--- a/CIT280CRM/CIT280CRM/Views/InvoiceModels/Index.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/InvoiceModels/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CIT280CRM.Models.InvoiceModels>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Invoices";
 }
 
 <h2>Index</h2>
