--- a/CIT280CRM/CIT280CRM/Views/Shared/_Layout.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - WimSatt Building Supplies</title>
+    <title>@ViewBag.Title - WimSatt Building Materials</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -32,7 +32,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - WimSatt Building Supplies</p>
+            <p>&copy; @DateTime.Now.Year - WimSatt Building Materials</p>
         </footer>
     </div>
 
