--- a/CIT280CRM/CIT280CRM/Views/Shared/_Layout.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Shared/_Layout.cshtml
@@ -21,8 +21,14 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Clients", "Index", "ClientModels")</li>
-                    <li>@Html.ActionLink("Invoices", "Index", "InvoiceModels")</li>
+                    <li>@Html.ActionLink("Invoices", "Index", "Invoice")</li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Manage<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Clients", "Index", "ClientModels")</li>
+                            <li>@Html.ActionLink("Products", "Index", "Products")</li>
+                        </ul>
+                    </li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
