--- a/CIT280CRM/CIT280CRM/Views/Products/Index.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Products/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CIT280CRM.Models.ProductModels>
+﻿@model IEnumerable<CIT280CRM.Models.ViewModels.ProductViewModel>
 
 @{
     ViewBag.Title = "Index";
