--- a/CIT280CRM/CIT280CRM/Views/Products/Delete.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Products/Delete.cshtml
@@ -32,7 +32,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.CategoryID)
+            @ViewBag.Category
         </dd>
 
     </dl>
