--- a/CIT280CRM/CIT280CRM/Views/Products/Details.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Products/Details.cshtml
@@ -31,7 +31,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.CategoryID)
+            @ViewBag.Category
         </dd>
 
     </dl>
