--- a/CIT280CRM/CIT280CRM/Views/ClientModels/Index.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/ClientModels/Index.cshtml
@@ -12,24 +12,12 @@
 </p>
 <table class="table" id="client_table">
     <tr>
-        <th>
-            CompanyName
-        </th>
-        <th>
-            Address1
-        </th>
-        <th>
-            City
-        </th>
-        <th>
-            State
-        </th>
-        <th>
-            Phone1
-        </th>
-        <th>
-            Email
-        </th>
+        <th>CompanyName</th>
+        <th>Address1</th>
+        <th>City</th>
+        <th>State</th>
+        <th>Phone1</th>
+        <th>Email</th>
         <th></th>
     </tr>
 
