--- a/CIT280CRM/CIT280CRM/Views/Invoice/Index.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Invoice/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<CIT280CRM.Models.InvoiceModels>
+﻿@using PagedList.Mvc;
+@model PagedList.IPagedList<CIT280CRM.Models.InvoiceModels>
 
 @{
     ViewBag.Title = "Index";
@@ -9,26 +10,14 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
+<table class="table" id="invoice_table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.ClientModels.CompanyName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TotalAmount)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PurchaseOrder)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.InvoiceDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ShipDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.InvoiceStatus)
-        </th>
+        <th>CompanyName</th>
+        <th>TotalAmount</th>
+        <th>PurchaseOrder</th>
+        <th>InvoiceDate</th>
+        <th>ShipDate</th>
+        <th>InvoiceStatus</th>
         <th></th>
     </tr>
 
@@ -61,3 +50,7 @@
 }
 
 </table>
+
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+@Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }),
+    PagedListRenderOptions.EnableUnobtrusiveAjaxReplacing(new AjaxOptions() { HttpMethod = "POST", UpdateTargetId = "invoice_table" }))
