Added Admin action and user view models

--- a/CIT280CRM/CIT280CRM/Views/Shared/_Layout.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Clients", "Index", "ClientModels")</li>
                             <li>@Html.ActionLink("Products", "Index", "Products")</li>
+                            <li>@Html.ActionLink("Administration", "Admin", "Home")</li>
                         </ul>
                     </li>
                 </ul>
