--- a/CIT280CRM/CIT280CRM/Views/Shared/_Layout.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Shared/_Layout.cshtml
@@ -27,9 +27,18 @@
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Clients", "Index", "ClientModels")</li>
                             <li>@Html.ActionLink("Products", "Index", "Products")</li>
-                            <li>@Html.ActionLink("Administration", "Admin", "Home")</li>
+                            
                         </ul>
                     </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administration<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Manage Users", "Admin", "Home")</li>
+                            <li>@Html.ActionLink("Manage Roles", "Admin", "Home")</li>
+                        </ul>
+                    
+                    </li>
+                    
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
