Added Role management controller, actions, and view. Added site authorization and administration. Must be signed into Admin or Staff to use site's functions.

--- a/CIT280CRM/CIT280CRM/Views/Account/Index.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Account/Index.cshtml
@@ -30,7 +30,8 @@
         <td>
             @Html.ActionLink("Edit", "Edit", new { userName=item.UserName }) |
             @Html.ActionLink("Details", "Details", new { userName = item.UserName }) |
-            @Html.ActionLink("Delete", "Delete", new { userName = item.UserName })
+            @Html.ActionLink("Delete", "Delete", new { userName = item.UserName }) |
+            @Html.ActionLink("Roles", "ViewUsersRoles", new { userName = item.UserName })
         </td>
     </tr>
 }
