--- a/CIT280CRM/CIT280CRM/Views/Home/Admin.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Home/Admin.cshtml
@@ -3,5 +3,10 @@
     ViewBag.Title = "Admin";
 }
 
-<h2>Admin</h2>
+<h2>Administration</h2>
 
+@Html.ActionLink("Click here to manage users.", "Index", "Account") <br />
+@Html.ActionLink("Click here to manage roles.", "Index", "IdentityRole") <br />
+@Html.ActionLink("Click here to manage Products.", "Index", "Products") <br />
+@Html.ActionLink("Click here to manage Clients.", "Index", "ClientModels") <br />
+@Html.ActionLink("Click here to manage Clients.", "Index", "Invocie") <br />
