--- a/CIT280CRM/CIT280CRM/Views/Invoice/Index.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Invoice/Index.cshtml
@@ -9,6 +9,12 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
+<form method="get" action="@Url.Action("IndexSearch", "InvoiceController")">
+    <label for="search">Search by PO</label>
+    <input type="text" name="search" id="search" />
+    <button type="submit">Submit</button>
+</form>
 <table class="table">
     <tr>
         <th>
