--- a/CIT280CRM/CIT280CRM/Views/Invoice/Index.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Invoice/Index.cshtml
@@ -7,6 +7,12 @@
 
 <h2>Index</h2>
 
+<form method="get" action="@Url.Action("IndexSearch", "InvoiceController")">
+    <label for="search">Search by PO</label>
+    <input type="text" name="search" id="search" />
+    <button type="submit">Submit</button>
+</form>
+
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
