--- a/CIT280CRM/CIT280CRM/Views/ClientModels/Index.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/ClientModels/Index.cshtml
@@ -12,10 +12,10 @@
 </p>
 <table class="table" id="client_table">
     <tr>
-        <th>@Html.ActionLink("CompanyName", "Index", new { sortId = 1 })</th>
+        <th>@Html.ActionLink("CompanyName", "Index", new { sortId = 1 }) <span class="glyphicon glyphicon-sort-by-alphabet"></span></th>
         <th>Address1</th>
         <th>City</th>
-        <th>@Html.ActionLink("State", "Index", new { sortId = 2 })</th>
+        <th>@Html.ActionLink("State", "Index", new { sortId = 2 }) <span class="glyphicon glyphicon-sort-by-alphabet"></span></th>
         <th>Phone1</th>
         <th>Email</th>
         <th></th>
