--- a/CIT280CRM/CIT280CRM/Views/Invoice/Index.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Invoice/Index.cshtml
@@ -18,11 +18,11 @@
 </p>
 <table class="table" id="invoice_table">
     <tr>
-        <th>@Html.ActionLink("CompanyName", "Index", new { sortId = 1 })</th>
-        <th>@Html.ActionLink("TotalAmount", "Index", new { sortId = 2 })</th>
-        <th>@Html.ActionLink("PurchaseOrder", "Index", new { sortId = 3 })</th>
-        <th>@Html.ActionLink("InvoiceDate", "Index", new { sortId = 4 })</th>
-        <th>@Html.ActionLink("ShipDate", "Index", new { sortId = 5 })</th>
+        <th>@Html.ActionLink("CompanyName", "Index", new { sortId = 1 }) <span class="glyphicon glyphicon-sort-by-alphabet"></span></th>
+        <th>@Html.ActionLink("TotalAmount", "Index", new { sortId = 2 }) <span class="glyphicon glyphicon-sort-by-order-alt"></span></th>
+        <th>@Html.ActionLink("PurchaseOrder", "Index", new { sortId = 3 }) <span class="glyphicon glyphicon-sort-by-order"></span></th>
+        <th>@Html.ActionLink("InvoiceDate", "Index", new { sortId = 4 }) <span class="glyphicon glyphicon-sort-by-attributes"></span></th>
+        <th>@Html.ActionLink("ShipDate", "Index", new { sortId = 5 }) <span class="glyphicon glyphicon-sort-by-attributes"></span></th>
         <th>InvoiceStatus</th>
         <th></th>
     </tr>
@@ -45,7 +45,7 @@
             @Html.DisplayFor(modelItem => item.ShipDate)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.InvoiceStatus)
+            @formatStatus(@Html.DisplayFor(modelItem => item.InvoiceStatus).ToString())
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.InvoiceID }) |
@@ -60,3 +60,29 @@
 Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
 @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }),
     PagedListRenderOptions.EnableUnobtrusiveAjaxReplacing(new AjaxOptions() { HttpMethod = "POST", UpdateTargetId = "invoice_table" }))
+
+@helper formatStatus(string s)
+{
+string labelFormat = "label-default";
+
+switch (s)
+{
+    case "Shipped":
+        labelFormat = "label-primary";
+        break;
+
+    case "Processing":
+        labelFormat = "label-warning";
+        break;
+
+    case "Created":
+        labelFormat = "label-info";
+        break;
+
+    case "Delivered":
+        labelFormat = "label-success";
+        break;
+}
+
+    <span class="label @labelFormat">@s</span>
+}
