Made view titles better, improved navigation between pages

--- a/CIT280CRM/CIT280CRM/Views/Account/AddRoleToUser.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Account/AddRoleToUser.cshtml
@@ -23,3 +23,6 @@
 
     <input type="submit" value="Save" />
 }
+<div>
+    @Html.ActionLink("Back To User's Roles", "ViewUsersRoles", new { userName = ViewBag.UserName })
+</div>
