--- a/CIT280CRM/CIT280CRM/Views/Invoice/Details.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Invoice/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CIT280CRM.Models.InvoiceModels
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Invoice Details";
 }
 
-<h2>Details</h2>
+<h2>Invoice Details</h2>
 
 <div>
     <h4>InvoiceModels</h4>
