--- a/CIT280CRM/CIT280CRM/Views/Products/Index.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Products/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<CIT280CRM.Models.ProductModels>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Products";
 }
 
-<h2>Index</h2>
+<h2>Products</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
