--- a/CIT280CRM/CIT280CRM/Views/Account/Create.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Account/Create.cshtml
@@ -1,17 +1,16 @@
 ﻿@model CIT280CRM.Models.CreateUserViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create User";
 }
 
-<h2>Create</h2>
+<h2>Create User</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>CreateUserViewModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
