--- a/CIT280CRM/CIT280CRM/Views/Account/Delete.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Account/Delete.cshtml
@@ -1,14 +1,13 @@
 ﻿@model CIT280CRM.Models.EditUserViewModel
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete User";
 }
 
-<h2>Delete</h2>
+<h2>Delete User</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>CreateUserViewModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
