--- a/CIT280CRM/CIT280CRM/Views/Account/Details.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Account/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model CIT280CRM.Models.EditUserViewModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "User Details";
 }
 
-<h2>Details</h2>
+<h2>User Details</h2>
 
 <div>
-    <h4>EditUserViewModel</h4>
     <hr />
     <dl class="dl-horizontal">
 
