--- a/CIT280CRM/CIT280CRM/Views/Account/Edit.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Account/Edit.cshtml
@@ -1,17 +1,16 @@
 ﻿@model CIT280CRM.Models.EditUserViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit User";
 }
 
-<h2>Edit</h2>
+<h2>Edit User</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>EditUserViewModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.UserName)
