--- a/CIT280CRM/CIT280CRM/Views/ClientModels/Create.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/ClientModels/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CIT280CRM.Models.ClientModels
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Client";
 }
 
-<h2>Create</h2>
+<h2>Create Client</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>ClientModels</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
