--- a/CIT280CRM/CIT280CRM/Views/ClientModels/Details.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/ClientModels/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model CIT280CRM.Models.ClientModels
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Client Details";
 }
 
-<h2>Details</h2>
+<h2>Client Details</h2>
 
 <div>
-    <h4>ClientModels</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
