--- a/CIT280CRM/CIT280CRM/Views/IdentityRole/Delete.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/IdentityRole/Delete.cshtml
@@ -1,14 +1,13 @@
 ﻿@model Microsoft.AspNet.Identity.EntityFramework.IdentityRole
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete User Role";
 }
 
-<h2>Delete</h2>
+<h2>Delete User Role</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>IdentityRoleTemp</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
