--- a/CIT280CRM/CIT280CRM/Views/IdentityRole/Details.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/IdentityRole/Details.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "User Role Detail";
 }
 
-<h2>Details</h2>
+<h2>User Role Details</h2>
 
 <div>
-    <h4>User Role Detail</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
