--- a/CIT280CRM/CIT280CRM/Views/Invoice/Edit.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Invoice/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CIT280CRM.Models.InvoiceModels
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Invoice";
 }
 
-<h2>Edit</h2>
+<h2>Edit Invoice</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>InvoiceModels</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.InvoiceID)
