--- a/CIT280CRM/CIT280CRM/Views/Products/Details.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Products/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model CIT280CRM.Models.ProductModels
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Product Details";
 }
 
-<h2>Details</h2>
+<h2>Product Details</h2>
 
 <div>
-    <h4>ProductModels</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
