--- a/CIT280CRM/CIT280CRM/Views/SaleItemModels/Create.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/SaleItemModels/Create.cshtml
@@ -4,16 +4,14 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Create Sale Item</h2>
 
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>SaleItemModels</h4>
-        <hr />
+    <div class="form-horizontal">        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.ProductID, htmlAttributes: new { @class = "control-label col-md-2" })
