--- a/CIT280CRM/CIT280CRM/Views/SaleItemModels/Delete.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/SaleItemModels/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Delete Sale Item</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>SaleItemModels</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
