--- a/CIT280CRM/CIT280CRM/Views/SaleItemModels/Details.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/SaleItemModels/Details.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Sale Item Details</h2>
 
 <div>
-    <h4>SaleItemModels</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
