--- a/CIT280CRM/CIT280CRM/Views/Invoice/Index.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Invoice/Index.cshtml
@@ -17,6 +17,16 @@
 
 }
 
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+
+    <label for="search">Search by Company Name</label>
+    @Html.TextBox("searchName")
+    <button type="submit" value="Search">Submit</button>
+
+}
+
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
