--- a/CIT280CRM/CIT280CRM/Views/Invoice/Index.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Invoice/Index.cshtml
@@ -11,7 +11,7 @@
 {
     @Html.AntiForgeryToken()
 
-    <label for="search">Search by PO</label>
+    <label for="search">Search (Company Name or PO #)</label>
     @Html.TextBox("searchTerm")
     <button type="submit" value="Search">Submit</button>
 
