Products Controller/Views finished

--- a/CIT280CRM/CIT280CRM/Views/Products/Index.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Products/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Products</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add Product", "Create")
 </p>
 <table class="table">
     <tr>
