--- a/CIT280CRM/CIT280CRM/Views/Products/Create.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Products/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CIT280CRM.Models.ProductModels
 
 @{
-    ViewBag.Title = "Create Product";
+    ViewBag.Title = "Add Product";
 }
 
-<h2>Create Product</h2>
+<h2>Add Product</h2>
 
 
 @using (Html.BeginForm()) 
