--- a/CIT280CRM/CIT280CRM/Views/ClientModels/Delete.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/ClientModels/Delete.cshtml
@@ -71,7 +71,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Phone1Type)
+            @ViewBag.PrimaryPhoneType
         </dd>
 
         <dt>
@@ -87,7 +87,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Phone2Type)
+            @ViewBag.SecondaryPhoneType
         </dd>
 
         <dt>
