--- a/CIT280CRM/CIT280CRM/Views/ClientModels/Details.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/ClientModels/Details.cshtml
@@ -70,7 +70,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Phone1Type)
+            @ViewBag.PrimaryPhoneType
         </dd>
 
         <dt>
@@ -86,7 +86,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Phone2Type)
+            @ViewBag.SecondaryPhoneType
         </dd>
 
         <dt>
