--- a/CIT280CRM/CIT280CRM/Views/ClientModels/Edit.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/ClientModels/Edit.cshtml
@@ -75,7 +75,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Phone1Type, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Phone1Type, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EnumDropDownListFor(model => model.Phone1Type, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Phone1Type, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -91,7 +91,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Phone2Type, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Phone2Type, new { htmlAttributes = new { @class = "form-control" } })
+               @Html.EnumDropDownListFor(model => model.Phone2Type, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Phone2Type, "", new { @class = "text-danger" })
             </div>
         </div>
