--- a/CIT280CRM/CIT280CRM/Views/Invoice/Delete.cshtml
+++ b/CIT280CRM/CIT280CRM/Views/Invoice/Delete.cshtml
@@ -15,7 +15,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ClientModels.CompanyName)
+            @ViewBag.CompanyName
         </dd>
 
         <dt>
